# OOP

./: 6lab.py  anime.py  pyproject.toml
1_lab/: README.md  gleb-py.py  my_first_app.ipynb  my_first_app.py
2lab/: README.md  lab.2.py
4lab/: 4lab.py  README.md
5lab/: 5lab.py  readme.md
6lab/: README.md
7lab/: REAMDE.md  pyproject.toml
7lab/conversation_agent/: agent.py
7lab/creative_writer/: agent.py
7lab/math_agent/: agent.py
7lab/my_first_agent/: agent.py
7lab/safe_agent/: agent.py
7lab/stateful_agent/: agent.py  user_state.json
7lab/story_improver/: agent.py
7lab/student_helper/: agent.py
7lab/tools/: common_tools.py
7lab/ultimate_agent/: agent.py
lab.3/: README.md  main.py  my_class.py  users.txt
