[project]
name = "6lab"
version = "0.1.0"
description = ""
authors = [
    {name = "poetry add requests"}
]
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.33.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
